Changed strategy. Host IPs will be fed to Vagrant for provider and provisioner to fix IP address

--- a/infra/roles/terraform/templates/tfvars.j2
+++ b/infra/roles/terraform/templates/tfvars.j2
@@ -1,2 +1,2 @@
-environment = "{{ terraform['%s' | format(env)].environment }}"
+environment = "{{ inventory['%s' | format(env)].environment }}"
 module = "{{ '%s' | format(module) }}"
