--- a/infra/roles/vagrant/templates/vagrant-hosts.j2
+++ b/infra/roles/vagrant/templates/vagrant-hosts.j2
@@ -7,8 +7,7 @@
 environment: {{ f_env }}
 gateway: {{ gateway }}
 hosts:
-{% for host in hosts %}
-  - name: {{ host.name }}-{{ f_env }}
-    ip: {{ host.ip }}
+{% for key, value in hosts.items() %}
+  {{ key }}-{{ f_env }}: {{ value }}
 {% endfor %}
 
