--- a/infra/roles/vagrant/templates/upload.j2
+++ b/infra/roles/vagrant/templates/upload.j2
@@ -10,8 +10,8 @@
 
 echo 'Copying host files to server {{f_name}} at vagrant@{{dhcp_ip}}:/home/vagrant/'
 
-scp -i ~/.vagrant.d/insecure_private_key bootstrap-{{f_name}}.sh vagrant@{{dhcp_ip}}:/home/vagrant/
-scp -i ~/.vagrant.d/insecure_private_key netplan-{{f_name}}.yaml vagrant@{{dhcp_ip}}:/home/vagrant/
+scp -i ~/.vagrant.d/insecure_private_key scripts/bootstrap-{{f_name}}.sh vagrant@{{dhcp_ip}}:/home/vagrant/
+scp -i ~/.vagrant.d/insecure_private_key scripts/netplan-{{f_name}}.yaml vagrant@{{dhcp_ip}}:/home/vagrant/
 scp -i ~/.vagrant.d/insecure_private_key ~/.ssh/id_rsa.pub vagrant@{{dhcp_ip}}:/home/vagrant/
 
 {% endfor %}
