--- a/infra/roles/vagrant/templates/test-hosts.j2
+++ b/infra/roles/vagrant/templates/test-hosts.j2
@@ -6,10 +6,9 @@
 {% for key, value in hosts.items() %}
     {% set name = key %}
     {% set f_name = [name, "-", env] | join("") %}
-    {% set dhcp_ip = dhcp_ips[f_name] %}
 
-echo 'Exec remote host scripts for server {{f_name}} at vagrant@{{dhcp_ip}}:/home/vagrant/'
+echo 'Exec remote host scripts for server {{f_name}} at vagrant@{{value}}:/home/vagrant/'
 
-ssh -i ~/.vagrant.d/insecure_private_key vagrant@{{dhcp_ip}} 'echo "Hello Moto" :-) :-) :-)'
+ssh -i ~/.vagrant.d/insecure_private_key vagrant@{{value}} 'echo "Hello Moto ({{ f_name }}) :-) :-) :-)"'
 
 {% endfor %}
