--- a/infra/roles/k3s/templates/patch-network-interface.j2
+++ b/infra/roles/k3s/templates/patch-network-interface.j2
@@ -3,5 +3,5 @@
 spec:
   calicoNetwork:
     nodeAddressAutodetectionV4:
-      firstFound: nill
+      firstFound: false
       interface: {{net_int}}
